2018-03-27 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCast.c,
	  doc/sdccman.lyx,
	  src/SDCCglobl.h,
	  src/SDCCmain.c:
	  Implement basic optimization of calls to standard library functions, RFE #564.

2018-03-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Minor optimization for 8-bit pointer reads.

2018-03-26 Philipp Klaus Krause <pkk AT spth.de>

	* support/valdiag/tests/constantRange.c:
	  Make tests expect a few more warnings implemented in SDCC.
	* src/stm8/gen.c:
	  Fix | of a with itself.
	* support/valdiag/tests/bug-971834.c:
	  Do not expect unreasonable warning.
	* src/SDCCast.h,
	  src/SDCCast.c,
	  src/SDCCicode.c,
	  support/valdiag/tests/pointers.c:
	  Fix bug #2730.

2018-03-26 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCCast.c,
	  support/valdiag/valdiag.py,
	  support/valdiag/tests/pointers.c:
	  Diagnostics for conversions between pointers to objects and pointers to functions.
	* src/stm8/gen.c,
	  src/stm8/peeph.def:
	  Some minor improvements.

2018-03-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve calls via global function pointers.
	* src/pic16/gen.c,
	  src/pic16/ralloc.c,
	  src/pic16/ralloc.c:
	  Fix NEARPTRSIZE use.
	* src/hc08/main.c:
	  Fix leftover max type size.

2018-03-25 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8-large/Makefile.in,
	  device/lib/stm8-large/_fast_long_neg.s:
	  Remove unused support routine.
	* src/port.h,
	  src/stm8/main.c:
	  Fix library path for large memory model.
	* src/SDCCpeeph.c:
	  Fix labelIsUncondJump() for large memory model.
	* src/stm8/gen.c:
	  Simplify generation of calls, implement 24-bit return values.
	* device/lib/stm8-large/Makefile.in:
	  Fix build of char multiplicative operator routines.
	* support/regression/ports/stm8-large/support.c:
	  Fix regression test output.

2018-03-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
